--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -13,6 +13,6 @@
 div.circle {
     position: absolute;
     width: 300px;
-    height: 2 00px;
+    height: 200px;
     border: 2px solid black;
 }
