--- a/client/src/app/menu/menu.component.scss
+++ b/client/src/app/menu/menu.component.scss
@@ -27,10 +27,10 @@ span{font-family: 'Emilys Candy', cursive;}
     box-shadow: rgb(27, 27, 27) -30px 50px 25px 20px;
     border: 1.5px inset rgba(0, 0, 0, 0.85);
     background-color: white;
+    transition: box-shadow 0.3s;
     &:hover {
-        //background-color: darken(#fafafa, 2%);  
         box-shadow: rgb(27, 27, 27) -25px 40px 30px 23px;
-        transition: all 0.2s;
+        transition: box-shadow 0.4s;
     }
 }
 
