--- a/client/src/app/menu/menu.component.html
+++ b/client/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div id="start_menu" class="d-flex justify-content-center">
+<div id="container" class="d-flex justify-content-center">
     <div class="card align-self-center">
         <div class="left">
             <span style="font-size: 1em; padding-left: 0px;">K</span>
@@ -7,14 +7,13 @@
         </div>
         <div class="card-body text-white  text-center">
             <h5 class="card-title">CABO CARD GAME</h5>
-            <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
             <p class="card-text"></p>
             <br>
             <button type="button" class="btn btn-outline-success">Start a Game</button>
             <br>
             <button type="button" class="btn btn-outline-success">Join a Game</button>
             <br>
-            <button type="button" class="btn btn-outline-success">How do I play?</button>
+            <button routerLink="/how-to-play" type="button" class="btn btn-outline-success">How do I play?</button>
         </div>
         <div class="right">
             <div class="rotated">
