--- a/client/src/app/menu/menu.component.scss
+++ b/client/src/app/menu/menu.component.scss
@@ -4,8 +4,6 @@
 :host{
     height: 100%;
     width: 100%;
-    float: left;
-    background:radial-gradient(#0C6339 10%,#08472A 90%);
 }
 
 h5{
@@ -16,7 +14,7 @@ h5{
 
 span{font-family: 'Emilys Candy', cursive;}
 
-#start_menu{
+#container{
     height: 100%;
     padding: auto;
 }
