routing to game room

--- a/client/src/app/menu/menu.component.html
+++ b/client/src/app/menu/menu.component.html
@@ -9,7 +9,7 @@
             <h5 class="card-title">CABO CARD GAME</h5>
             <p class="card-text"></p>
             <br>
-            <button type="button" class="btn btn-outline-success">Start a Game</button>
+            <button routerLink="/game-room" type="button" class="btn btn-outline-success">Start a Game</button>
             <br>
             <button type="button" class="btn btn-outline-success">Join a Game</button>
             <br>
