--- a/client/src/app/game-room/chat/chat.component.scss
+++ b/client/src/app/game-room/chat/chat.component.scss
@@ -2,5 +2,7 @@
     height: 100%;
     width: 30%;
     float: right;
+    //background-color: lightgrey;
+    background:radial-gradient(#0C6339 10%,#7a7a7a 90%);
 }
 
