--- a/client/src/app/game-room/board/board.component.html
+++ b/client/src/app/game-room/board/board.component.html
@@ -1,7 +1,7 @@
-<div #container id="container">
+<ng-template #container id="container">
+    
+</ng-template>
 
-    <div id="menu-button">
-        <span routerLink="/menu">&equiv;</span>
-    </div>
-
+<div id="menu-button">
+    <span routerLink="/menu">&equiv;</span>
 </div>
