removed blacked code

--- a/client/src/app/how-to-play/how-to-play.component.scss
+++ b/client/src/app/how-to-play/how-to-play.component.scss
@@ -12,8 +12,7 @@
 }
 
 .card{
-    //opacity: 0.9;
-    //border-radius: 30px 80px !important;
+    opacity: 0.9;
     box-shadow: rgb(27, 27, 27) -30px 50px 25px 20px;
     border: 1.5px inset rgba(0, 0, 0, 0.85);
     border-radius: 80px 30px !important;
