--- a/client/src/app/game-room/board/player/player.component.html
+++ b/client/src/app/game-room/board/player/player.component.html
@@ -1,31 +1,31 @@
 <div id="container" #container>
 
     <div class="row " style="height: 50%;">
-      <div #_7 class="col d-flex justify-content-center">
-        7
+      <div #_6 class="col d-flex justify-content-center">
+        <!-- <app-card [empty]="isEmpty[6]"></app-card> -->
+      </div>
+      <div #_0 class="col d-flex justify-content-center">
+        <!-- <app-card [empty]="isEmpty[0]"></app-card> -->
       </div>
       <div #_1 class="col d-flex justify-content-center">
-        1
+        <!-- <app-card [empty]="isEmpty[1]"></app-card> -->
       </div>
-      <div #_2 class="col d-flex justify-content-center">
-        2
-      </div>
-      <div #_8 class="col d-flex justify-content-center">
-        8
+      <div #_7 class="col d-flex justify-content-center">
+        <!-- <app-card [empty]="isEmpty[7]"></app-card> -->
       </div>
     </div>
     <div class="row" style="height: 50%;">
-      <div #_5 class="col d-flex justify-content-center">
-        5
+      <div #_4 class="col d-flex justify-content-center">
+        <!-- <app-card [empty]="isEmpty[4]"></app-card> -->
+      </div>
+      <div #_2 class="col d-flex justify-content-center">
+        <!-- <app-card [empty]="isEmpty[2]"></app-card> -->
       </div>
       <div #_3 class="col d-flex justify-content-center">
-        3
+        <!-- <app-card [empty]="isEmpty[3]"></app-card> -->
       </div>
-      <div #_4 class="col d-flex justify-content-center">
-        4
-      </div>
-      <div #_6 class="col d-flex justify-content-center">
-        6
+      <div #_5 class="col d-flex justify-content-center">
+        <!-- <app-card [empty]="isEmpty[5]"></app-card> -->
       </div>
     </div>
     
