edit on board container

--- a/client/src/app/game-room/board/board.component.html
+++ b/client/src/app/game-room/board/board.component.html
@@ -1,6 +1,8 @@
-<ng-template #container id="container">
-    
-</ng-template>
+<div id="container">
+    <ng-template #container>
+
+    </ng-template>
+</div>
 
 <div id="menu-button">
     <span routerLink="/menu">&equiv;</span>
