--- a/client/src/app/menu/how-to-play/how-to-play.component.html
+++ b/client/src/app/menu/how-to-play/how-to-play.component.html
@@ -1,104 +1,100 @@
-<div id="container" class="d-flex justify-content-center">
-    <div class="card align-self-center">
-        <div class="header">
-            <span routerLink='/menu'>&clubs;</span>
-        </div>
-        <div class="card-body text-white text-center">
-            <p class="card-text">some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some textsome text
-                some text
+<div class="header">
+    <span (click)="back('back')">&laquo;</span>
+</div>
+<div class="card-body text-center">
+    <p class="card-text">some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some textsome text
+        some text
 
-                some textsome textsome text
+        some textsome textsome text
 
-                some text
-                some text
-                some text
-                some text
+        some text
+        some text
+        some text
+        some text
 
-            </p>
-            <p class="card-text">some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some textsome text
-                some text
+    </p>
+    <p class="card-text">some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some textsome text
+        some text
 
-                some textsome textsome text
+        some textsome textsome text
 
-                some text
-                some text
-                some text
-                some text
+        some text
+        some text
+        some text
+        some text
 
-            </p>
-            <p class="card-text">some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some textsome text
-                some text
+    </p>
+    <p class="card-text">some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some textsome text
+        some text
 
-                some textsome textsome text
+        some textsome textsome text
 
-                some text
-                some text
-                some text
-                some text
+        some text
+        some text
+        some text
+        some text
 
-            </p>
-            <p class="card-text">some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some textsome text
-                some text
+    </p>
+    <p class="card-text">some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some textsome text
+        some text
 
-                some textsome textsome text
+        some textsome textsome text
 
-                some text
-                some text
-                some text
-                some text
+        some text
+        some text
+        some text
+        some text
 
-            </p>
-            <p class="card-text">some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some text
-                some textsome text
-                some text
+    </p>
+    <p class="card-text">some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some text
+        some textsome text
+        some text
 
-                some textsome textsome text
+        some textsome textsome text
 
-                some text
-                some text
-                some text
-                some text
+        some text
+        some text
+        some text
+        some text
 
-            </p>
-        </div>
-    </div>
+    </p>
 </div>
