--- a/client/src/app/menu/menu.component.html
+++ b/client/src/app/menu/menu.component.html
@@ -1,27 +1,8 @@
 <div id="container" class="d-flex justify-content-center">
     <div class="card align-self-center">
-        <div class="left">
-            <span style="font-size: 1em; padding-left: 0px;">K</span>
-            <br>
-            <span>&hearts;</span>
-        </div>
-        <div class="card-body text-white text-center">
-            <h5 class="card-title">CABO CARD GAME</h5>
-            <p class="card-text"></p>
-            <br>
-            <button routerLink="/game-room" type="button" class="btn btn-outline-success">Start a Game</button>
-            <br>
-            <button type="button" class="btn btn-outline-success">Join a Game</button>
-            <br>
-            <button routerLink="/how-to-play" type="button" class="btn btn-outline-success">How do I play?</button>
-        </div>
-        <div class="right">
-            <div class="rotated">
-                <span style="font-size: 1em; padding-left: 0px;">K</span>
-                <br>
-                <span>&spades;</span>
-            </div>
-        </div>
+        <ng-template #container>
+
+        </ng-template>
     </div>
 </div>
 <router-outlet></router-outlet>
