--- a/client/src/app/menu/new-game/new-game.component.html
+++ b/client/src/app/menu/new-game/new-game.component.html
@@ -1,21 +1,25 @@
-<div class="container">
-    <h2>Bootstrap Counter Field</h2>
-    <div class="row">
-        <div class="col-sm-3">
-            <div class="input-group">
-                <span class="input-group-btn">
-                    <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus"
-                        data-field="quant[1]">
-                        <span class="glyphicon glyphicon-minus"></span>
-                    </button>
-                </span>
-                <input type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10">
-                <span class="input-group-btn">
-                    <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">
-                        <span class="glyphicon glyphicon-plus"></span>
-                    </button>
-                </span>
-            </div>
-        </div>
+<div class="header">
+    <span class="back" (click)="back('back')">&laquo;</span>
+</div>
+
+<h2 class="align-self-center">Start a new game</h2>
+
+<div class="row">
+    <div class="col-sm">
+        <button (click)="playerClicked('1')" type="button" class="btn btn-outline-success">+</button>
+        <h2>with {{playerCount}} players</h2>
+        <button (click)="playerClicked('-1')" type="button" class="btn btn-outline-success">-</button>
     </div>
+    <div class="col- align-self-center">
+        <h2>&</h2>
+    </div>
+    <div class="col-sm">
+        <button (click)="botClicked('1')" type="button" class="btn btn-outline-success">+</button>
+        <h2>with {{botCount}} bots</h2>
+        <button (click)="botClicked('-1')" type="button" class="btn btn-outline-success">-</button>
+    </div>
+</div>
+
+<div class="footer">
+    <span (click)="startClicked()">Start</span>
 </div>
