--- a/client/src/app/menu/new-game/new-game.component.scss
+++ b/client/src/app/menu/new-game/new-game.component.scss
@@ -2,15 +2,22 @@
 
 .btn {
     width: 50px;
+    height: 50px;
     font-size: 2em;
     margin-left: 1em;
     margin-right: 1em;
+    font-family: 'Lobster', cursive;
 }
 
 h2 {
-    font-family: "Caveat", cursive;
-    white-space: nowrap;
+    font-family: "Potta One", cursive;
     font-weight: 700;
+}
+
+h3 {
+    font-family: "Caveat", cursive;
+    font-weight: 700;
+    white-space: nowrap;
 }
 
 .row {
@@ -25,7 +32,7 @@ input {
     font-size: 3em;
     font-style: italic;
     margin-top: -0.7em;
-    margin-bottom: 3em;
+    margin-bottom: 2em;
 
     .back {
         color: rgb(124, 124, 124);
@@ -51,7 +58,7 @@ input {
     font-weight: 500;
     font-style: italic;
     text-align: right;
-    margin-top: 3em;
+    margin-top: 2em;
     margin-bottom: -0.2em;
     color: rgb(124, 124, 124);
 
