minor edit player component

--- a/client/src/app/game-room/board/player/player.component.html
+++ b/client/src/app/game-room/board/player/player.component.html
@@ -1,6 +1,10 @@
 <div id="container" #container>
 
-  <div class="row " style="height: 50%;">
+  <div class="row justify-content-center" style="height: 8%; margin-bottom: 0.5em;">
+    ID {{playerId}}
+  </div>
+
+  <div class="row " style="height: 45%;">
     <div #_6 class="col d-flex justify-content-center">
     </div>
     <div #_0 class="col d-flex justify-content-center">
@@ -11,7 +15,7 @@
     </div>
   </div>
   
-  <div class="row" style="height: 50%;">
+  <div class="row" style="height: 45%;">
     <div #_4 class="col d-flex justify-content-center">
     </div>
     <div #_2 class="col d-flex justify-content-center">
