add pack and discard components

--- a/client/src/app/game-room/board/board.component.html
+++ b/client/src/app/game-room/board/board.component.html
@@ -2,6 +2,19 @@
     <ng-template #container>
 
     </ng-template>
+    <div class="pack_discard">
+        <div class="row">
+            <div class="col-">
+                <app-pack></app-pack>
+            </div>
+            <div class="col-">
+                STICK
+            </div>
+            <div class="col-">
+                <app-discard></app-discard>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div id="menu-button">
