--- a/client/src/app/game-room/board/card/card.component.html
+++ b/client/src/app/game-room/board/card/card.component.html
@@ -1,1 +1,1 @@
-<img *ngIf="!empty" src="assets/Back.png" style="width: 45px; height: 70px;">
+<img *ngIf="!empty" src="assets/Cards/Back.png" style="width: 45px; height: 70px;">
