board activates and disables card pack draw

--- a/client/src/app/game-room/board/pack/pack.component.html
+++ b/client/src/app/game-room/board/pack/pack.component.html
@@ -1,1 +1,1 @@
-<img src="assets/Cards/Back.png" style="width: 60px; height: 90px;">
+<img (click)="buttonClick('draw')" src="assets/Cards/Back.png" style="width: 60px; height: 90px;">
