--- a/client/src/app/game-room/board/board.component.html
+++ b/client/src/app/game-room/board/board.component.html
@@ -5,7 +5,7 @@
     <div class="pack_discard">
         <div class="row">
             <div class="col-">
-                <app-pack></app-pack>
+                <app-pack [isActive]="roundStart" (choice)="receiveMessage($event)"></app-pack>
             </div>
             <div class="col-">
                 STICK
