playing with animations on menu components

--- a/client/src/app/menu/how-to-play/how-to-play.component.html
+++ b/client/src/app/menu/how-to-play/how-to-play.component.html
@@ -1,100 +1,27 @@
-<div class="header">
-    <span (click)="back('back')">&laquo;</span>
-</div>
-<div class="card-body text-center">
-    <p class="card-text">some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some textsome text
-        some text
-
-        some textsome textsome text
-
-        some text
-        some text
-        some text
-        some text
-
-    </p>
-    <p class="card-text">some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some textsome text
-        some text
-
-        some textsome textsome text
-
-        some text
-        some text
-        some text
-        some text
-
-    </p>
-    <p class="card-text">some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some textsome text
-        some text
-
-        some textsome textsome text
-
-        some text
-        some text
-        some text
-        some text
-
-    </p>
-    <p class="card-text">some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some textsome text
-        some text
-
-        some textsome textsome text
-
-        some text
-        some text
-        some text
-        some text
-
-    </p>
-    <p class="card-text">some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some text
-        some textsome text
-        some text
-
-        some textsome textsome text
-
-        some text
-        some text
-        some text
-        some text
-
-    </p>
+<div [@slideStatus]="status" id="container" #container>
+    <div class="header">
+        <span (click)="back('back')">&laquo;</span>
+    </div>
+    <div class="card-body text-center">
+        <p class="card-text">some text
+            some textsome text some text some text some text some text some text some textsome text some text some
+            textsome textsome text
+            some text some text some text some text
+        </p>
+        <p class="card-text">some text
+            some text some text some text some text some text some text some text some textsome text
+            some text some textsome textsome text some text some text some text some text
+        </p>
+        <p class="card-text">some text some text some text some text some text some text
+            some text some text some textsome text some text some textsome textsome text some text
+            some text some text some text
+        </p>
+        <p class="card-text">some text some text some text some text some text some text some text some text
+            some textsome text some text some textsome textsome text some text some text some text some text
+        </p>
+        <p class="card-text">some text some text some text some text some text some text some text some text some
+            textsome text some text
+            some textsome textsome text some text some text some text some text
+        </p>
+    </div>
 </div>
