--- a/client/src/app/game-room/board/board.component.scss
+++ b/client/src/app/game-room/board/board.component.scss
@@ -43,7 +43,8 @@ div.placeholder {
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%,-50%);
     padding: 33px;
-    box-shadow: inset 0 0 15px black;
+    border-radius: 15px;
+    box-shadow: inset 0 0 9px black;
     .row{
         .col- {
             padding: 1em;
