--- a/client/src/app/game-room/chat/chat.component.scss
+++ b/client/src/app/game-room/chat/chat.component.scss
@@ -4,5 +4,7 @@
     float: right;
     background:radial-gradient(circle  at -15% 52%,rgba(9,78,46,1) 5%, rgba(9,71,42,1) 50%);  
     opacity: 0.95;
+    padding-right: 1%;
 }
+
 
