--- a/client/src/app/game-room/chat/add-message/add-message.component.html
+++ b/client/src/app/game-room/chat/add-message/add-message.component.html
@@ -1,6 +1,6 @@
 <div class="input-group my-3">
-    <input type="text" class="form-control" placeholder="Type a message" aria-describedby="basic-addon2">
+    <input type="text" class="form-control" placeholder="Type a message" aria-describedby="basic-addon2" [(ngModel)]="input"/>
     <div class="input-group-append">
-        <button class="btn btn-info" type="button">SEND</button>
+        <button class="btn btn-info" type="button" (click)="send()">SEND</button>
     </div>
 </div>
