--- a/client/src/app/game-room/board/player/player.component.html
+++ b/client/src/app/game-room/board/player/player.component.html
@@ -1,28 +1,36 @@
 <div id="container" #container>
 
   <div class="row justify-content-center" style="height: 8%; margin-bottom: 0.5em;">
-    ID {{playerId}}
+    ID {{id}}
   </div>
 
   <div class="row " style="height: 45%;">
-    <div #_6 class="col d-flex justify-content-center">
+    <div (click)="containerClick('6')" class="col d-flex justify-content-center">
+      <ng-container #_6></ng-container>
     </div>
-    <div #_0 class="col d-flex justify-content-center">
+    <div (click)="containerClick('0')" class="col d-flex justify-content-center">
+      <ng-container #_0></ng-container>
     </div>
-    <div #_1 class="col d-flex justify-content-center">
+    <div (click)="containerClick('1')" class="col d-flex justify-content-center">
+      <ng-container #_1></ng-container>
     </div>
-    <div #_7 class="col d-flex justify-content-center">
+    <div (click)="containerClick('7')" class="col d-flex justify-content-center">
+      <ng-container #_7></ng-container>
     </div>
   </div>
   
   <div class="row" style="height: 45%;">
-    <div #_4 class="col d-flex justify-content-center">
+    <div (click)="containerClick('4')" class="col d-flex justify-content-center">
+      <ng-container #_4></ng-container>
     </div>
-    <div #_2 class="col d-flex justify-content-center">
+    <div (click)="containerClick('2')" class="col d-flex justify-content-center">
+      <ng-container #_2></ng-container>
     </div>
-    <div #_3 class="col d-flex justify-content-center">
+    <div (click)="containerClick('3')" class="col d-flex justify-content-center">
+      <ng-container #_3></ng-container>
     </div>
-    <div #_5 class="col d-flex justify-content-center">
+    <div (click)="containerClick('5')" class="col d-flex justify-content-center">
+      <ng-container #_5></ng-container>
     </div>
   </div>
 
