edited container click to fire mouse location event

--- a/client/src/app/game-room/board/player/player.component.html
+++ b/client/src/app/game-room/board/player/player.component.html
@@ -5,31 +5,31 @@
   </div>
 
   <div class="row " style="height: 45%;">
-    <div (click)="containerClick('6')" class="col d-flex justify-content-center">
+    <div (click)="containerClick($event,'6')" class="col d-flex justify-content-center">
       <ng-container #_6></ng-container>
     </div>
-    <div (click)="containerClick('0')" class="col d-flex justify-content-center">
+    <div (click)="containerClick($event,'0')" class="col d-flex justify-content-center">
       <ng-container #_0></ng-container>
     </div>
-    <div (click)="containerClick('1')" class="col d-flex justify-content-center">
+    <div (click)="containerClick($event,'1')" class="col d-flex justify-content-center">
       <ng-container #_1></ng-container>
     </div>
-    <div (click)="containerClick('7')" class="col d-flex justify-content-center">
+    <div (click)="containerClick($event,'7')" class="col d-flex justify-content-center">
       <ng-container #_7></ng-container>
     </div>
   </div>
   
   <div class="row" style="height: 45%;">
-    <div (click)="containerClick('4')" class="col d-flex justify-content-center">
+    <div (click)="containerClick($event,'4')" class="col d-flex justify-content-center">
       <ng-container #_4></ng-container>
     </div>
-    <div (click)="containerClick('2')" class="col d-flex justify-content-center">
+    <div (click)="containerClick($event,'2')" class="col d-flex justify-content-center">
       <ng-container #_2></ng-container>
     </div>
-    <div (click)="containerClick('3')" class="col d-flex justify-content-center">
+    <div (click)="containerClick($event,'3')" class="col d-flex justify-content-center">
       <ng-container #_3></ng-container>
     </div>
-    <div (click)="containerClick('5')" class="col d-flex justify-content-center">
+    <div (click)="containerClick($event,'5')" class="col d-flex justify-content-center">
       <ng-container #_5></ng-container>
     </div>
   </div>
