added firstReveal -- need to change trigger to onMessage "game-start"

--- a/client/src/app/game-room/board/board.component.html
+++ b/client/src/app/game-room/board/board.component.html
@@ -11,7 +11,8 @@
                 STICK
             </div>
             <div class="discard col-">
-                <app-discard #discard [isDrawable]="roundStart" [isDiscardable]="canDiscard" (dive)="dumpsterDive()" (discard)="clickedDiscard()"></app-discard>
+                <app-discard #discard [isDrawable]="roundStart" [isDiscardable]="canDiscard" 
+                            (dive)="dumpsterDive()" (discard)="clickedDiscard()"></app-discard>
             </div>
         </div>
     </div>
