removed <alert> from app component

--- a/client/src/app/menu/menu.component.html
+++ b/client/src/app/menu/menu.component.html
@@ -1,3 +1,5 @@
+<!-- <alert></alert> -->
+
 <div id="container" class="d-flex justify-content-center">
     <div class="card align-self-center">
         <ng-template #container>
