--- a/client/src/app/game-room/board/board.component.html
+++ b/client/src/app/game-room/board/board.component.html
@@ -18,18 +18,21 @@
                     (discard)="clickedDiscard()"></app-discard>
             </div>
         </div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-">
+                <button type="button" class="btn btn-outline-primary cabo_btn" [disabled]="!roundStart"
+                    (click)="caboClicked()">CABO</button>
+            </div>
+        </div>
         <div class="row">
             <div class="col- d-flex justify-content-left">
                 <button #ready_btn type="button" class="btn btn-success" (click)="readyClicked()">I'm ready!</button>
-            </div>
-            <div class="col- d-flex justify-content-center">
-                <button type="button" class="btn btn-outline-primary cabo_btn" [disabled]="!roundStart"
-                    (click)="caboClicked()">CABO</button>
             </div>
             <div class="col- d-flex justify-content-right">
                 <button *ngIf="state=='swap-cards'" type="button" class="btn btn-info"
                     (click)="skipSwapClicked()">Skip<br>Swap</button>
             </div>
+
         </div>
     </div>
 </div>
