--- a/client/src/app/game-room/board/board.component.html
+++ b/client/src/app/game-room/board/board.component.html
@@ -20,7 +20,7 @@
         </div>
         <div class="row d-flex justify-content-center">
             <div class="col-">
-                <button type="button" class="btn btn-outline-primary cabo_btn" [disabled]="!roundStart"
+                <button type="button" class="btn btn-outline-primary cabo_btn" [disabled]="!roundStart || cabo"
                     (click)="caboClicked()">CABO</button>
             </div>
         </div>
