--- a/client/src/app/game-room/board/card/card.component.scss
+++ b/client/src/app/game-room/board/card/card.component.scss
@@ -38,3 +38,14 @@ img{
         box-shadow: 0 0 4px #fff, 0 0 8px orangered, 0 0 12px orangered, 0 0 16px orangered;
     }
 }
+
+
+@keyframes glow-red {
+    from {
+        box-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px orangered, 0 0 12px orangered;
+    }
+
+    to {
+        box-shadow: 0 0 4px #fff, 0 0 8px red, 0 0 12px red, 0 0 16px red;
+    }
+}
