minor visual changes

--- a/client/src/app/game-room/board/board.component.html
+++ b/client/src/app/game-room/board/board.component.html
@@ -3,6 +3,12 @@
 
     </ng-template>
     <div #center_element class="center_element">
+        <div class="row d-flex justify-content-center">
+            <div class="col- d-flex justify-content-left">
+                <button #ready_btn *ngIf="!ready" type="button" class="btn btn-success" (click)="readyClicked()">I'm
+                    ready!</button>
+            </div>
+        </div>
         <div class="pack_discard row">
             <div #pack id="pack" class="col-">
                 <app-pack [isDrawable]="roundStart" (draw)="drawCard()"></app-pack>
@@ -10,7 +16,7 @@
             <div class="col-">
                 <br>
                 <button [disabled]="state=='swap-cards' || !ready" type="button" class="btn btn-outline-warning"
-                    (click)="stickClicked()">STICK</button>
+                    (click)="stickClicked()" *ngIf="false">STICK</button>
             </div>
             <div class="discard col-">
                 <app-discard #discard [isDrawable]="roundStart" [isDiscardable]="canDiscard" (dive)="dumpsterDive()"
@@ -24,9 +30,6 @@
             </div>
         </div>
         <div class="row">
-            <div class="col- d-flex justify-content-left">
-                <button #ready_btn *ngIf="!ready" type="button" class="btn btn-success" (click)="readyClicked()">I'm ready!</button>
-            </div>
             <div class="col- d-flex justify-content-right">
                 <button *ngIf="state=='swap-cards'" type="button" class="btn btn-info"
                     (click)="skipSwapClicked()">Skip<br>Swap</button>
