--- a/client/src/app/game-room/board/board.component.scss
+++ b/client/src/app/game-room/board/board.component.scss
@@ -59,8 +59,12 @@ div.placeholder {
     box-shadow: inset 0 0 9px black;
 }
 
+.btn{
+    margin: 5px;
+}
+
 .cabo_btn{
     padding: 5px;
-    margin: 20px;
+    margin: 10px;
     font-family: 'Potta One', cursive;
 }
