edits for Cabo call and revealed card toggle()

--- a/client/src/app/game-room/board/board.component.html
+++ b/client/src/app/game-room/board/board.component.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="pack_discard row">
-            <div #pack id="pack" class="col-">
+            <div class="col-">
                 <app-pack [isDrawable]="roundStart" (draw)="drawCard()"></app-pack>
             </div>
             <div class="col-">
