how 2 play text added

--- a/client/src/app/menu/how-to-play/how-to-play.component.html
+++ b/client/src/app/menu/how-to-play/how-to-play.component.html
@@ -3,25 +3,17 @@
         <span (click)="back('back')">&laquo;</span>
     </div>
     <div class="card-body text-center">
-        <p class="card-text">some text
-            some textsome text some text some text some text some text some text some textsome text some text some
-            textsome textsome text
-            some text some text some text some text
+        <p class="card-text">The goal is to get the least sum of cards among all the players on the board. <br>
+            Ace is valued a point, Joker is 0 and red King is -1, rest of the cards are valued at their printed value.
         </p>
-        <p class="card-text">some text
-            some text some text some text some text some text some text some text some textsome text
-            some text some textsome textsome text some text some text some text some text
+        <p class="card-text">Some cards have a special "ability" when revealed,<br>
+            the game will instruct you to use it when revealed.
         </p>
-        <p class="card-text">some text some text some text some text some text some text
-            some text some text some textsome text some text some textsome textsome text some text
-            some text some text some text
+        <p class="card-text">Any player can call CABO on any of his/hers turns.
         </p>
-        <p class="card-text">some text some text some text some text some text some text some text some text
-            some textsome text some text some textsome textsome text some text some text some text some text
+        <p class="card-text">Don't rush, take your time, make sure you know which cards you are holding.
         </p>
-        <p class="card-text">some text some text some text some text some text some text some text some text some
-            textsome text some text
-            some textsome textsome text some text some text some text some text
+        <p class="card-text">Have fun!
         </p>
     </div>
 </div>
